--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,9 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/tasks": "^1.1.1",
     "cookie-parser": "~1.4.4",
+    "crypto-js": "^3.1.9-1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "firebase-admin": "^8.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
