--- a/src/server/package.json
+++ b/src/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug" : "node ./tools/debug.js"
   },
   "dependencies": {
     "@google-cloud/tasks": "^1.1.1",
@@ -13,6 +14,7 @@
     "express": "~4.16.1",
     "firebase-admin": "^8.2.0",
     "firebase-functions": "^3.0.1",
+    "google-auth-library": "^4.2.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
