--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "debug" : "node ./tools/debug.js"
+    "debug": "node ./tools/debug.js"
   },
   "dependencies": {
     "@google-cloud/tasks": "^1.1.1",
@@ -12,6 +12,7 @@
     "crypto-js": "^3.1.9-1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "facebook-node-sdk": "^0.2.0",
     "firebase-admin": "^8.2.0",
     "firebase-functions": "^3.0.1",
     "google-auth-library": "^4.2.2",
