--- a/src/server/package.json
+++ b/src/server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@google-cloud/tasks": "^1.1.1",
+    "axios": "^0.19.0",
     "cookie-parser": "~1.4.4",
     "crypto-js": "^3.1.9-1",
     "debug": "~2.6.9",
@@ -17,6 +18,7 @@
     "firebase-functions": "^3.0.1",
     "google-auth-library": "^4.2.2",
     "http-errors": "~1.6.3",
+    "https": "^1.0.0",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
