--- a/src/server/package.json
+++ b/src/server/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.3",
     "https": "^1.0.0",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "validator": "^11.0.0"
   }
 }
