--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "debug": "node ./tools/debug.js"
+    "debug": "node ./test/testRestaurants.js"
   },
   "dependencies": {
+    "@firebase/testing": "^0.11.3",
     "@google-cloud/tasks": "^1.1.1",
     "axios": "^0.19.0",
     "cookie-parser": "~1.4.4",
