--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@firebase/testing": "^0.11.3",
     "@google-cloud/tasks": "^1.1.1",
+    "@hapi/joi": "^15.1.0",
     "axios": "^0.19.0",
     "cookie-parser": "~1.4.4",
     "crypto-js": "^3.1.9-1",
