--- a/src/server/package.json
+++ b/src/server/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^4.2.2",
     "http-errors": "~1.6.3",
     "https": "^1.0.0",
+    "latlon-geohash": "^1.1.0",
     "mock-cloud-firestore": "^0.9.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
