--- a/src/server/package.json
+++ b/src/server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@firebase/testing": "^0.11.3",
+    "@google-cloud/storage": "^3.0.2",
     "@google-cloud/tasks": "^1.1.1",
     "@hapi/joi": "^15.1.0",
     "axios": "^0.19.0",
@@ -24,6 +25,7 @@
     "latlon-geohash": "^1.1.0",
     "mock-cloud-firestore": "^0.9.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.1",
     "pug": "2.0.0-beta11",
     "validator": "^11.0.0"
   },
