--- a/src/server/package.json
+++ b/src/server/package.json
@@ -11,6 +11,7 @@
     "@google-cloud/storage": "^3.0.2",
     "@google-cloud/tasks": "^1.1.1",
     "@hapi/joi": "^15.1.0",
+    "@sendgrid/mail": "^6.4.0",
     "axios": "^0.19.0",
     "cookie-parser": "~1.4.4",
     "crypto-js": "^3.1.9-1",
