--- a/src/server/package.json
+++ b/src/server/package.json
@@ -27,6 +27,7 @@
     "mock-cloud-firestore": "^0.9.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.1",
+    "natural": "^0.6.3",
     "pug": "2.0.0-beta11",
     "validator": "^11.0.0"
   },
