--- a/src/admin-app/package.json
+++ b/src/admin-app/package.json
@@ -15,6 +15,7 @@
     "linked-list": "^2.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-places-autocomplete": "^7.2.1",
     "react-select": "^3.0.8"
   },
   "devDependencies": {
