allow to add photo

--- a/src/admin-app/package.json
+++ b/src/admin-app/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
+    "firebase": "^7.6.0",
     "linked-list": "^2.1.0",
+    "material-ui-image": "^3.2.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-dropzone": "^10.2.0",
     "react-places-autocomplete": "^7.2.1",
     "react-select": "^3.0.8"
   },
