--- a/src/admin-app/package.json
+++ b/src/admin-app/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
+    "cropperjs": "^1.5.6",
     "firebase": "^7.6.0",
     "linked-list": "^2.1.0",
     "material-ui-image": "^3.2.2",
     "react": "^16.10.2",
+    "react-cropper": "^1.3.0",
     "react-dom": "^16.10.2",
     "react-dropzone": "^10.2.0",
     "react-places-autocomplete": "^7.2.1",
@@ -26,6 +28,7 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.3.2",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9"
   }
